--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
         <!-- Slogan -->
         <div class="container">
             <div class="row">
-                <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 slogan d-flex flex-column justify-content-center ms-4">
+                <div
+                    class="col-lg-6 col-md-6 col-sm-12 col-xs-12 slogan d-flex flex-column justify-content-center ms-4">
                     <h1 class="text-white fw-bolder">
                         <p>RELAX AND</p>WATCH THE MOVIE
                     </h1>
@@ -95,18 +96,14 @@
             <h2 class="text-white">Trending</h2>
         </div>
         <div class="container mb-5">
-            <div class="row">
-                <div class="col-lg-3 col-md-6 col-sm-12 my-2  film-card position-relative">
-                    <a href="details.html"><img src="https://c4.wallpaperflare.com/wallpaper/411/347/616/movies-hollywood-movies-wallpaper-preview.jpg"
-                        alt="" class="position-relative"></a>
-                        <a href="#"><i class="fa-solid fa-bookmark position-absolute"></i></a>
-                </div>
-                
+            <div class="row" id="trendMovie">
+
+
             </div>
         </div>
 
         <div class="d-flex justify-content-center">
-            <a href="movies.html"><button class=" btn btn-red px-4 mt-5">See More <i
+            <a href="movies.html"><button class=" btn btn-red px-4 mt-1">See More <i
                         class="fa-solid fa-caret-right"></i><i class="fa-solid fa-caret-right"></i><i
                         class="fa-solid fa-caret-right"></i></button></a>
         </div>
@@ -183,59 +180,74 @@
         <div class="owl-carousel owl-theme container">
             <div class="item feedback py-2 my-3">
                 <div class="customer-img ">
-                    <img src="https://livedemo00.template-help.com/wt_prod-20691/images/index-12.jpg" class="rounded-circle" alt="">
+                    <img src="https://livedemo00.template-help.com/wt_prod-20691/images/index-12.jpg"
+                        class="rounded-circle" alt="">
                 </div>
                 <h5 class="customer-name text-center my-1">
                     Sharon Willis
                 </h5>
-                <p class="text text-center">One of the best online movie streaming services that I’ve seen! Thank you for the constant updates of your movies and TV shows catalog. I recommend MOOV to everyone!</p>
+                <p class="text text-center">One of the best online movie streaming services that I’ve seen! Thank you
+                    for the constant updates of your movies and TV shows catalog. I recommend MOOV to everyone!</p>
             </div>
             <div class="item feedback py-2 my-3">
                 <div class="customer-img ">
-                    <img src="https://livedemo00.template-help.com/wt_prod-20691/images/index-13.jpg" class="rounded-circle" alt="">
+                    <img src="https://livedemo00.template-help.com/wt_prod-20691/images/index-13.jpg"
+                        class="rounded-circle" alt="">
                 </div>
                 <h5 class="customer-name text-center my-1">
-                   Jack Wilson 
+                    Jack Wilson
                 </h5>
-                <p class="text text-center">My girlfriend recommended me this website and I’m actually quite surprised by the range of the movies and TV series they offer here. Even some of my personal favorites can be found on MOOV!</p>
+                <p class="text text-center">My girlfriend recommended me this website and I’m actually quite surprised
+                    by the range of the movies and TV series they offer here. Even some of my personal favorites can be
+                    found on MOOV!</p>
             </div>
             <div class="item feedback py-2 my-3">
                 <div class="customer-img ">
-                    <img src="https://livedemo00.template-help.com/wt_prod-20691/images/index-15.jpg" class="rounded-circle" alt="">
+                    <img src="https://livedemo00.template-help.com/wt_prod-20691/images/index-15.jpg"
+                        class="rounded-circle" alt="">
                 </div>
                 <h5 class="customer-name text-center my-1 ">
-                  Kelly McMillan
+                    Kelly McMillan
                 </h5>
                 <p class="text text-center">
-                    I’m a big fan of movies, especially of classic ones. I’ve been looking for a great movie website for quite a long time and MOOV has almost every movie I’m interested in. That’s great!
+                    I’m a big fan of movies, especially of classic ones. I’ve been looking for a great movie website for
+                    quite a long time and MOOV has almost every movie I’m interested in. That’s great!
                 </p>
             </div>
             <div class="item feedback py-2 my-3">
                 <div class="customer-img ">
-                    <img src="https://livedemo00.template-help.com/wt_prod-20691/images/index-16.jpg" class="rounded-circle" alt="">
+                    <img src="https://livedemo00.template-help.com/wt_prod-20691/images/index-16.jpg"
+                        class="rounded-circle" alt="">
                 </div>
                 <h5 class="customer-name text-center my-1">
                     Harold Barnett
                 </h5>
-                <p class="text text-center">Sci-fi action movies and thrillers as well as the TV shows of the same genre are my true passion and MOOV has one of the greatest range of movies and TV series to offer. Thanks!</p>
+                <p class="text text-center">Sci-fi action movies and thrillers as well as the TV shows of the same genre
+                    are my true passion and MOOV has one of the greatest range of movies and TV series to offer. Thanks!
+                </p>
             </div>
             <div class="item feedback py-2 my-3">
                 <div class="customer-img ">
-                    <img src="https://livedemo00.template-help.com/wt_prod-20691/images/index-18.jpg" class="rounded-circle" alt="">
+                    <img src="https://livedemo00.template-help.com/wt_prod-20691/images/index-18.jpg"
+                        class="rounded-circle" alt="">
                 </div>
                 <h5 class="customer-name text-center my-1">
                     Samantha Lee
                 </h5>
-                <p class="text text-center">The superhero and fantasy movies available at MOOV are exceptionally great! I’m finally able to watch all my favorites without having to pay more than I can allow.</p>
+                <p class="text text-center">The superhero and fantasy movies available at MOOV are exceptionally great!
+                    I’m finally able to watch all my favorites without having to pay more than I can allow.</p>
             </div>
             <div class="item feedback py-2 my-3">
                 <div class="customer-img ">
-                    <img src="https://livedemo00.template-help.com/wt_prod-20691/images/index-17.jpg" class="rounded-circle" alt="">
+                    <img src="https://livedemo00.template-help.com/wt_prod-20691/images/index-17.jpg"
+                        class="rounded-circle" alt="">
                 </div>
                 <h5 class="customer-name text-center my-1">
                     Albert Webb
                 </h5>
-                <p class="text text-center">This website is incredible! It has not only top box office premieres but also other great movies as well as TV shows and series that I find awesome to watch and discuss with my friends.</p>
+                <p class="text text-center">This website is incredible! It has not only top box office premieres but
+                    also other great movies as well as TV shows and series that I find awesome to watch and discuss with
+                    my friends.</p>
             </div>
         </div>
     </section>
@@ -305,6 +317,50 @@
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
     <script src="assets/js/main.js"></script>
+    <script type="module">
+        // Import the functions you need from the SDKs you need
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js";
+        // TODO: Add SDKs for Firebase products that you want to use
+        // https://firebase.google.com/docs/web/setup#available-libraries
+
+        // Your web app's Firebase configuration
+        const firebaseConfig = {
+            apiKey: "AIzaSyCdS3B3Dwtb0K33GQwwFfk_P2BWDoDvxXA",
+            authDomain: "movies-59241.firebaseapp.com",
+            databaseURL: "https://movies-59241-default-rtdb.firebaseio.com",
+            projectId: "movies-59241",
+            storageBucket: "movies-59241.appspot.com",
+            messagingSenderId: "477142513746",
+            appId: "1:477142513746:web:a6c7ae16a52e899c2b078b"
+        };
+        // Initialize Firebase
+        const app = initializeApp(firebaseConfig);
+        import { getDatabase, set, ref, update, remove, get } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-database.js";
+        const db = getDatabase();
+
+
+        const trend = document.getElementById("trendMovie");
+        function trendMovie() {
+    const id = generate_uuidv4();
+    get(ref(db, "film/"))
+        .then((data) => {
+            const films = data.val();
+            const filmKeys = Object.keys(films);
+            for (let i = 0; i <8; i++) {
+                const filmKey = filmKeys[i];
+                const film = films[filmKey];
+                trend.innerHTML +=
+                    `<div class="col-lg-3 col-md-6 col-sm-12 my-2  film-card position-relative">
+                        <img src="${film.Image}" alt="" class="position-relative">
+                        <a href="#"><i class="fa-solid fa-bookmark position-absolute"></i></a>
+                    </div>`;
+            }
+        });
+}
+        trendMovie();
+
+
+    </script>
 </body>
 
 </html>
