--- a/create.html
+++ b/create.html
@@ -79,7 +79,8 @@
                 Actor: actor.value,
                 Year: year.value,
                 Director: director.value,
-                Trailer: trailer.value
+                Trailer: trailer.value,
+                id: id
             })
             .then(successAlert("Perfect"))
             
